Updated to 1.20.1 - removed duplicated code - retextured items - remade recipes - rewrote background code - renamed items - changed recipe naming - started work on Nuclear Reactor